--- a/introducción-a-html/index.html
+++ b/introducción-a-html/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<hr>
 		<!-- Esto es un comentario -->
-		<h1>Hello, <a href="about.html">I'm Guillermo Rodas,</a></h1>
+		<h1>Hola, <a href="about.html">I'm Guillermo Rodas,</a></h1>
 		<h2>I help developers to improve their skills while creating quality products.</h2>
 		<hr> <!-- Esto es un void element -->
 		<p>I'm a <strong>Full-stack JavaScript Developer</strong> from <strong>Colombia</strong> living in Sweden.</p>
@@ -20,7 +20,7 @@
 			<li>Instalando Ubuntu en Windows 10/11</li>
 			<li>Instalación de Git</li>
 			<li>Configuración de las llaves SSH</li>
-			<li>Creando una cuenta de GitHub</li>
+			<li>Creando una cuenta de GitHub</li>										
 			<li>Instalación de Node.js y Yarn</li>
 			<li>Primeros pasos con VS Code</li>
 		</ol>
